Show a text if no certificates are loaded yet

BUG: 261054